<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:weightSum="10"
android:background="@drawable/tr"
tools:context=".Dashboard">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="2">

        <TextView
            android:id="@+id/text_dashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:onClick="logout"
            android:text="@string/dashboard"
            android:textColor="@color/cardview_light_background"
            android:textSize="35dp" />
    </RelativeLayout>

<GridLayout
    android:id="@+id/main_grid"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="8"
    android:alignmentMode="alignMargins"
    android:columnCount="2"
    android:columnOrderPreserved="false"
    android:padding="14dp"
    android:rowCount="3">
    <!-- Row 1-->
    <androidx.cardview.widget.CardView
        android:id="@+id/callcenter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:gravity="center_horizontal|center_vertical"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_operator"
                android:layout_width="wrap_content"
                android:layout_height="70dp"

                android:layout_gravity="center_horizontal"
                android:src="@drawable/operator" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/call_center"
                android:textAlignment="inherit"
                android:textColor="@color/colordanger"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <!-- Row 2-->
    <androidx.cardview.widget.CardView
        android:id="@+id/smscenter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:gravity="center_horizontal|center_vertical"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_smscenter"
                android:layout_width="wrap_content"
                android:layout_height="113dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/question" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sms_center"
                android:textAlignment="center"
                android:textColor="@color/colordanger"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <!-- Row 3-->
    <androidx.cardview.widget.CardView
        android:id="@+id/maps"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="135dp"
            android:layout_margin="16dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_lokasi"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_row="1"
                android:layout_column="2"
                android:onClick="maps"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/worldwide" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maps"
                android:textAlignment="center"
                android:textColor="@color/colordanger"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <!-- Row 4-->
    <androidx.cardview.widget.CardView
        android:id="@+id/admin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:gravity="center_horizontal|center_vertical"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_admin"
                android:layout_width="130dp"
                android:layout_height="70dp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/refresh" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="Admin"
                android:textAlignment="center"
                android:textColor="@color/colordanger"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <!-- Row 5-->
    <androidx.cardview.widget.CardView
        android:id="@+id/cemilan"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:gravity="center_horizontal|center_vertical"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_cemilan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/diet" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:text="@string/cemilan_ku"
                android:textAlignment="center"
                android:textColor="@color/colordanger"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <!-- Row 6-->
    <androidx.cardview.widget.CardView
        android:id="@+id/minuman"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:gravity="center_horizontal|center_vertical"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_lain"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/coffee" />
            <TextView
                android:text="@string/minuman"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/colordanger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</GridLayout>
</LinearLayout>