<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@drawable/bbc"
    tools:context=".MenuCemilan">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/text_dashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="Menu Cemilan"
            android:textColor="@color/cardview_light_background"
            android:textSize="34dp" />
    </RelativeLayout>

    <GridLayout
        android:id="@+id/main_grid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:padding="14dp"
        android:rowCount="3">
        <!-- Row 1-->
        <androidx.cardview.widget.CardView
            android:id="@+id/dora"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_dorayaki"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/dorayaki" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/dorayaki"
                    android:textAlignment="inherit"
                    android:textColor="@color/colordanger"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/harga0"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="$100"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <!-- Row 2-->
        <androidx.cardview.widget.CardView
            android:id="@+id/sus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_sushi"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/sushi" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sushi"
                    android:textAlignment="center"
                    android:textColor="@color/colordanger"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/harga1"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="$2000"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <!-- Row 3-->
        <androidx.cardview.widget.CardView
            android:id="@+id/ramen"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="135dp"
                android:layout_margin="6dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_ramen1"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ramen" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ramen"
                    android:textAlignment="center"
                    android:textColor="@color/colordanger"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/harga2"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="$1500"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <!-- Row 4-->
        <androidx.cardview.widget.CardView
            android:id="@+id/dango"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_dango"
                    android:layout_width="120dp"
                    android:layout_height="70dp"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/dango" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/dango"
                    android:textAlignment="center"
                    android:textColor="@color/colordanger"
                    android:textSize="18dp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/harga3"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="$200"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <!-- Row 5-->
        <androidx.cardview.widget.CardView
            android:id="@+id/takoyaki"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_tako"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/takoyaki" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="Takoyaki"
                    android:textAlignment="center"
                    android:textColor="@color/colordanger"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/harga4"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="$500"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <!-- Row 6-->
        <androidx.cardview.widget.CardView
            android:id="@+id/french"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_french"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="French Fries"
                    android:textAlignment="center"
                    android:textColor="@color/colordanger"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/harga5"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="$300"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </GridLayout>

    <TextView
        android:id="@+id/Total_Harga"
        android:text="TOTAL"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginLeft="143dp"
        android:background="@drawable/box"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/Harga"
        android:text="0"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/colorwhite"
        android:layout_marginLeft="165dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>